# AI-interview

./: .env  agent.py  main.py  mem0_resume_history.sqlite  pyproject.toml
app/api/: auth.py
app/api/auth/: dtos.py  routes.py  utils.py
app/api/interview/: interview.py  routes.py  utils.py  voice.py
app/core/: config.py  logger.py
app/db/: db.py  memory.py  prisma.py
app/db/prisma/: schema.prisma
app/db/prisma/migrations/20250519105847_/: migration.sql
app/models/: document_models.py
app/schemas/: auth_schema.py
app/utils/: jwt_utils.py
