[project]
name = "ai-interview-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "beanie>=1.29.0",
    "fastapi>=0.115.12",
    "google-genai>=1.14.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.4",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
