[project]
name = "ai-interview-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "elevenlabs>=1.59.0",
    "fastapi>=0.115.12",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.14.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.2.6",
    "openai>=1.79.0",
    "passlib>=1.7.4",
    "prisma>=0.15.0",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.4",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "uvicorn>=0.34.2",
    "whisper>=1.1.10",
]
